[gd_scene load_steps=16 format=2]

[ext_resource path="res://Script/Vecchina.gd" type="Script" id=1]
[ext_resource path="res://Images/Vecchia/telaio_sedia.png" type="Texture" id=2]
[ext_resource path="res://Images/Vecchia/braccio_iella.png" type="Texture" id=3]
[ext_resource path="res://Images/Vecchia/corpo_normale.png" type="Texture" id=4]
[ext_resource path="res://Images/Vecchia/corpo_gambe_alzate.png" type="Texture" id=5]
[ext_resource path="res://Images/Vecchia/testa_normale.png" type="Texture" id=6]
[ext_resource path="res://Images/Vecchia/testa_sorridente.png" type="Texture" id=7]
[ext_resource path="res://Images/Vecchia/ruota.png" type="Texture" id=8]
[ext_resource path="res://Script/ruota.gd" type="Script" id=9]
[ext_resource path="res://Images/Vecchia/braccio_normale.png" type="Texture" id=10]
[ext_resource path="res://Images/Vecchia/testa_morta.png" type="Texture" id=11]
[ext_resource path="res://Scenes/BaseLevel/Anim_Laughter.tres" type="Animation" id=12]
[ext_resource path="res://Scenes/BaseLevel/Anim_Push.tres" type="Animation" id=13]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.5138, 10.2205 )

[sub_resource type="Animation" id=2]

resource_name = "Anim_Death"
length = 3.0
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("testa_normale:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testa_sorridente:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, -45.0, -60.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("braccio_normale:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 53.395, -193.228 ), Vector2( 61.1407, -231.079 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("braccio_normale:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 31.6073 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ruota:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.6, 1, 1.4, 1.8, 2.2, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 40.0, 80.0, 120.0, 180.0, 220.0, 260.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("testa_morta:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Vecchina" type="KinematicBody2D" index="0"]

scale = Vector2( 0.4, 0.4 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite_Frame" type="Sprite" parent="." index="0"]

position = Vector2( 10.4888, 199.602 )
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
offset = Vector2( 10.4888, -199.602 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Position2D" type="Position2D" parent="Sprite_Frame" index="0"]

position = Vector2( 57.4153, -352.694 )
_sections_unfolded = [ "Transform" ]

[node name="braccio_iella" type="Sprite" parent="Sprite_Frame/Position2D" index="0"]

position = Vector2( -6.95456, 4.30258 )
rotation = -0.909491
texture = ExtResource( 3 )
offset = Vector2( -159.932, 14.3539 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="corpo_normale" type="Sprite" parent="Sprite_Frame" index="1"]

position = Vector2( -79.659, -200.017 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Z Index" ]

[node name="corpo_gambe_alzate" type="Sprite" parent="Sprite_Frame" index="2"]

visible = false
position = Vector2( -111.352, -235.611 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Z Index" ]

[node name="testa_normale" type="Sprite" parent="Sprite_Frame" index="3"]

position = Vector2( -65.4247, -522.882 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Visibility" ]

[node name="testa_sorridente" type="Sprite" parent="Sprite_Frame" index="4"]

visible = false
position = Vector2( -64.2873, -524.778 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="ruota" type="Sprite" parent="Sprite_Frame" index="5"]

position = Vector2( -0.89547, 1.52066 )
texture = ExtResource( 8 )
offset = Vector2( 4.82818, -3.77666 )
script = ExtResource( 9 )
_sections_unfolded = [ "Pause", "Transform", "Z Index" ]

[node name="braccio_normale" type="Sprite" parent="Sprite_Frame" index="6"]

position = Vector2( 53.395, -193.228 )
z_index = 1
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="testa_morta" type="Sprite" parent="Sprite_Frame" index="7"]

visible = false
position = Vector2( -63.1752, -485.095 )
rotation = 0.503746
texture = ExtResource( 11 )
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 20.0576, -37.8574 )
scale = Vector2( 17.7016, 41.302 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 317.331, 175.434 )
scale = Vector2( 7.89633, 9.42225 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("../Sprite_Frame")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Anim_Death = SubResource( 2 )
anims/Anim_Laughter = ExtResource( 12 )
anims/Anim_Push = ExtResource( 13 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]


